웹표준 CSS 선택자

--- a/source/02_HTML_CSS/ch03/1_form태그기본.html
+++ b/source/02_HTML_CSS/ch03/1_form태그기본.html
@@ -19,7 +19,7 @@
 <body>
     NICKNAME <input type="text" name="nickname" value="form 태그 밖의 input은 전달 X"/>
     <form action="https://www.daum.net">
-        <!--get method로는(def) ID 111 PW 222 입력 시
+        <!--[get] method로는(def) ID 111 PW 222 입력 시
         <!--https://www.daum.net/?id=111&pw=222로 이동-->
         <table>
             <tr>
@@ -29,7 +29,7 @@
                 <td>
                     <input type="text" />
                            <!--name="id"--> 
-                           <!--parameter name 없는 input은 전달 X-->
+                           <!--parameter [name] 없는 input은 전달 X-->
                 </td>
             </tr>
             <tr>
