--- a/source/02_HTML_CSS/ch04/3_id와class선택자.html
+++ b/source/02_HTML_CSS/ch04/3_id와class선택자.html
@@ -1,9 +1,46 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <style>
+        div{
+            border: 1px solid gray;
+            text-align: center;
+        }
+        #header{ /* id선택자(#) */
+                 width: 600px;
+                 margin: 0 auto; /* 바깥여백*/
+                 background-color: yellow;
+        }
+        #wrap{
+            width: 600px;
+            margin: 0 auto;
+            background-color: aqua;
+            overflow: hidden; /* 수평으로 높고 싶은 부모단*/
+        }
+        #wrap #content{
+            float:left;
+            width: 348px; /*가로폭 350 + 테두리 2px(1each)*/
+        }
+        #wrap #side_banner {
+            float: left;
+            width: 248px; /*가로폭 250 + 테두리 2px(1each)*/
+            height: 244px;
+        }
+        #wrap #content .odd{ /* class 선택자(.) */
+                             font-size: 1.5em; /*원래 크기의 1.5배*/
+        }
+        #wrap #content .menu2{
+            font-weight: bold; /*글씨 진하게*/
+        }
+        #wrap img{width: 200px;}
+        #footer { /* id선택자(#) */
+            width: 600px;
+            margin: 0 auto; /* 바깥여백*/
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
     <div id="header">
@@ -11,22 +48,25 @@
     </div>
     <div id="wrap">
         <div id="content">
-            <h2>CONTENTS</h2>
+            <h2>content</h2>
             <ul>
                 <li class="menu1 odd">menu1</li>
                 <li class="menu2">menu2</li>
                 <li class="menu3 odd">menu3</li>
-                <li class="menu4">menu4</li>
-                <li class="menu5 odd">menu5</li>
+                <li class="menu2">menu4</li>
+                <li class="menu1 odd">menu5</li>
             </ul>
         </div>
         <div id="side_banner">
-            <h2> BANNER </h2>
+            <h2>BANNER</h2>
             <a href="http://www.daum.net">
-                <img src="" alt="다음로고"
+                <img src="https://search4.kakaocdn.net/argon/656x0_80_wr/E0OAqIEqDRC"
+                     alt="다음로고" />
             </a>
         </div>
     </div>
-    <div id="footer"></div>
+    <div id="footer">
+        <h1>FOOTER</h1>
+    </div>
 </body>
 </html>
