웹표준 스마트폰 레이아웃

--- a/source/02_HTML_CSS/ch06/shoppingmall.html
+++ b/source/02_HTML_CSS/ch06/shoppingmall.html
@@ -4,17 +4,78 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <title></title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="css/shoppingmall.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <header>
-        <ul>
-            <li>
-                <a href=""><h1>Test</h1></a>
-            </li>
-        </ul>
+        <div class="gnb">
+            <ul>
+                <li><a href="#login">Login</a></li>
+                <li><a href="#join">Join Us</a></li>
+                <li><a href="#wish">Wish List</a></li>
+                <li><a href="#cart">Cart</a></li>
+                <li><a href="#order">Order</a></li>
+                <li><a href="#mypage">My Page</a></li>
+                <li><a href="#notice">Notice</a></li>
+                <li><a href="#qna">QnA</a></li>
+                <li><a href="#review">Review</a></li>
+                <li><a href="#favorite">Favorite</a></li>
+            </ul>
+        </div>
+        <div class="logo">Mall Logo</div>
+        <div class="hitmenu">
+            <ul>
+                <li><a href="#hit4">hit4</a></li>
+                <li><a href="#hit3">hit3</a></li>
+                <li><a href="#hit2">hit2</a></li>
+                <li><a href="#hit1">hit1</a></li>
+            </ul>
+        </div>
+        <div class="lnb">
+            <ul>
+                <li><a href="#menu1">menu1</a></li>
+                <li><a href="#menu2">menu2</a></li>
+                <li><a href="#menu3">menu3</a></li>
+                <li><a href="#menu4">menu4</a></li>
+                <li><a href="#menu5">menu5</a></li>
+                <li><a href="#menu6">menu6</a></li>
+                <li><a href="#menu7">menu7</a></li>
+                <li><a href="#menu8">menu8</a></li>
+            </ul>
+        </div>
     </header>
-    <div id="content"></div>
-    <footer></footer>
+    <div id="content">
+        <div class="section1">
+            <div class="slide_banner"><a href="#slide_banner">slide banner</a></div>
+            <div class="side_banner"><a href="#side_banner">side banner</a></div>
+        </div>
+        <div class="section2">
+            <div class="hit_product">
+                <ul>
+                    <li><a href="#hp1">hit_product1</li></a>
+                    <li><a href="#hp2">hit_product2</li></a>
+                    <li><a href="#hp3">hit_product3</li></a>
+                    <li><a href="#hp4">hit_product4</li></a>
+                </ul>
+            </div>
+            <div class="md_product">
+                <ul>
+                    <li><a href="#mp1">md_product1</li></a>
+                    <li><a href="#mp2">md_product2</li></a>
+                    <li><a href="#mp3">md_product3</li></a>
+                    <li><a href="#mp4">md_product4</li></a>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="office_logo">office logo</div>
+        <div class="office_address">office address</div>
+        <div class="shopping_info">shopping info</div>
+        <div class="copyright">copyright © megaIT co.,Ltd. All right reserved.</div>
+    </footer>
 </body>
 </html>
