JavaScript 조건문 반복문

--- a/source/03_JavaScript/ch01/2_오류확인.html
+++ b/source/03_JavaScript/ch01/2_오류확인.html
@@ -18,6 +18,8 @@
     </script>
 </head>
 <body>
-    
+    <script>
+        document.write('윗 스크립트에서 선언된 변수 al_pha값은 '+ al_pha);
+    </script>
 </body>
 </html>
